data/derived/comb/progs/unify/prog5580.ml.out
Characters 103-117:
  | Sine e    -> "sin(pi*" ^ exprToString e^ ")"
                             ^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         string
